# radarcoordlib

./: .copr.enc  .gitignore  .travis-build.sh  .travis.yml  Doxyfile  Makefile.am  README.md  RadarBeamCoord_util.cpp  RadarBeamCoord_util.hpp  RadarGeoCoord_util.cpp  RadarGeoCoord_util.hpp  RadarPoint_util.cpp  RadarPoint_util.hpp  RadarSegment_util.cpp  RadarSegment_util.hpp  RadarSite.cpp  RadarSite.hpp  configure.ac  generic.cpp  generic.hpp  radar_coord_exceptions.cpp  radarcoordlib.pc.in  radarcoordlib.spec  test_conversione_coord_radar.ods
doc/: Doxyfile.in  Makefile  Makefile.am  Makefile.in
esempi/: Esempio_calcolo_punti.ods  esempio_RadarBeamCoord.cpp  esempio_RadarGeoCoord.cpp  esempio_RadarPoint.cpp  esempio_RadarSegment.cpp
fedora/SPECS/: radarcoordlib.spec
radarcoordlib/: Makefile.am  RadarBeamCoord_util.cpp  RadarBeamCoord_util.hpp  RadarGeoCoord_util.cpp  RadarGeoCoord_util.hpp  RadarPoint_util.cpp  RadarPoint_util.hpp  RadarSegment_util.cpp  RadarSegment_util.hpp  RadarSite.cpp  RadarSite.hpp  generic.cpp  radar_coord_exceptions.cpp  radar_coord_exceptions.hpp
test/: Makefile.am  test_PointVeryClose.cpp  test_RadarBeamCoord.cpp  test_RadarGeoCoord.cpp  test_RadarPoint.cpp  test_RadarSegment.cpp
