lib_LTLIBRARIES = libradarcoord_util.la

libradarcoord_util_la_SOURCES = \
				generic.cpp \
				RadarBeamCoord_util.cpp \
				radar_coord_exceptions.cpp \
				RadarGeoCoord_util.cpp \
				RadarPoint_util.cpp \
				RadarSegment_util.cpp \
				RadarSite.cpp

packageincludedir = $(includedir)/radarcoord_util

packageinclude_HEADERS = \
			 generic.hpp \
			 RadarBeamCoord_util.hpp \
			 radar_coord_exceptions.hpp \
			 RadarGeoCoord_util.hpp \
			 RadarPoint_util.hpp \
			 RadarSegment_util.hpp \
			 RadarSite.hpp

SUBDIRS = doc
