SUBDIRS = radarcoordlib doc

pkgconfigdir = $(libdir)/pkgconfig

pkgconfig_DATA = radarcoordlib.pc

nobase_include_HEADERS = \
			 radarcoordlib/generic.hpp \
			 radarcoordlib/RadarBeamCoord_util.hpp \
			 radarcoordlib/radar_coord_exceptions.hpp \
			 radarcoordlib/RadarGeoCoord_util.hpp \
			 radarcoordlib/RadarPoint_util.hpp \
			 radarcoordlib/RadarSegment_util.hpp \
			 radarcoordlib/RadarSite.hpp
