AM_CPPFLAGS = -I$(top_srcdir) -I$(top_builddir)

lib_LTLIBRARIES = libradarcoord.la

libradarcoord_la_SOURCES = \
			   generic.cpp \
			   RadarBeamCoord_util.cpp \
			   radar_coord_exceptions.cpp \
			   RadarGeoCoord_util.cpp \
			   RadarPoint_util.cpp \
			   RadarSegment_util.cpp \
			   RadarSite.cpp
